Moved prover engine interfaces to ncore