@@ -32,9 +32,6 @@ import de.uka.ilkd.key.proof.init.*;
 import de.uka.ilkd.key.proof.init.IPersistablePO.LoadedPOContainer;
 import de.uka.ilkd.key.proof.io.*;
 import de.uka.ilkd.key.proof.io.AbstractProblemLoader.ReplayResult;
-import de.uka.ilkd.key.prover.ProverCore;
-import de.uka.ilkd.key.prover.TaskFinishedInfo;
-import de.uka.ilkd.key.prover.TaskStartedInfo;
 import de.uka.ilkd.key.prover.impl.ApplyStrategyInfo;
 import de.uka.ilkd.key.rule.IBuiltInRuleApp;
 import de.uka.ilkd.key.settings.ProofIndependentSettings;
@@ -47,6 +44,9 @@ import de.uka.ilkd.key.util.KeYConstants;
 import de.uka.ilkd.key.util.MiscTools;
 import de.uka.ilkd.key.util.ThreadUtilities;
 
+import org.key_project.prover.engine.ProverCore;
+import org.key_project.prover.engine.TaskFinishedInfo;
+import org.key_project.prover.engine.TaskStartedInfo;
 import org.key_project.util.collection.ImmutableSet;
 import org.key_project.util.collection.Pair;
 import org.key_project.util.java.SwingUtil;
@@ -166,7 +166,7 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
             }
             ApplyStrategyInfo result = (ApplyStrategyInfo) info.getResult();
 
-            Proof proof = info.getProof();
+            final Proof proof = (Proof) info.getProof();
             if (proof != null && !proof.isDisposed() && !proof.closed()
                     && mainWindow.getMediator().getSelectedProof() == proof) {
                 Goal g = result.nonCloseableGoal();
@@ -174,7 +174,7 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
                     g = proof.openGoals().head();
                 }
                 mainWindow.getMediator().goalChosen(g);
-                if (inStopAtFirstUncloseableGoalMode(info.getProof())) {
+                if (inStopAtFirstUncloseableGoalMode(proof)) {
                     // iff Stop on non-closeable Goal is selected a little
                     // popup is generated and proof is stopped
                     AutoDismissDialog dialog = new AutoDismissDialog(
@@ -190,12 +190,12 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
             if (!isAtLeastOneMacroRunning()) {
                 mainWindow.hideStatusProgress();
                 assert info instanceof ProofMacroFinishedInfo;
-                Proof proof = info.getProof();
+                final Proof proof = (Proof) info.getProof();
                 if (proof != null && !proof.closed()
                         && mainWindow.getMediator().getSelectedProof() == proof) {
                     Goal g = proof.openGoals().head();
                     mainWindow.getMediator().goalChosen(g);
-                    if (inStopAtFirstUncloseableGoalMode(info.getProof())) {
+                    if (inStopAtFirstUncloseableGoalMode(proof)) {
                         // iff Stop on non-closeable Goal is selected a little
                         // popup is generated and proof is stopped
                         AutoDismissDialog dialog = new AutoDismissDialog(
@@ -363,7 +363,7 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
 
     /**
      * Save proof in file. If autoSave is on, this will potentially overwrite already existing proof
-     * files with the same name. Otherwise the save dialog pops up. For loaded proofs both are
+     * files with the same name. Otherwise, the save dialog pops up. For loaded proofs both are
      * turned off by default, i.e. only manual saving is possible, and the save dialog never pops up
      * automatically (except for hitting the "Save ..." or "Save current proof" button).
      *
@@ -513,8 +513,8 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
                         "Proof could only be loaded partially.\n" + "In summary "
                             + result.getErrorList().size()
                             + " not loadable rule application(s) have been detected.\n"
-                            + "The first one:\n" + result.getErrorList().get(0).getMessage(),
-                        result.getErrorList().get(0));
+                            + "The first one:\n" + result.getErrorList().getFirst().getMessage(),
+                        result.getErrorList().getFirst());
                 }
             }
         }
